--- a/Index/index.html
+++ b/Index/index.html
@@ -16,11 +16,14 @@
     <p>This page provides an index of various CSS topics. Click on any topic to learn more!</p>
 
     <ul class="topic-list">
-        <li><a href="../CSS-Intro/index.html">CSS Introduction and Types of CSS</a></li>
-        <li><a href="../Box-Model/index.html">CSS Box Model</a></li>
-      <li><a href="../Type-of-Selectors/index.html">Types of selectors in CSS</a></li>
-      <li><a href="../Typography/index.html">What is Typography ?</a></li>
-      <li><a href="../Positioning/index.html">CSS Positioning</a></li>
+        <li><a href="../CSS-Intro/intro.html">CSS Introduction and Types of CSS</a></li>
+        <li><a href="../Box-Model/box.html">CSS Box Model</a></li>
+      <li><a href="../Type-of-Selectors/selectors.html">Types of selectors in CSS</a></li>
+      <li><a href="../Typography/typography.html">What is Typography ?</a></li>
+      <li><a href="../Display-Property/display.html">Display-Property</a></li>
+
+      <li><a href="../Positioning/position.html">CSS Positioning</a></li>
+
 
       <!-- <li><a href="css_layout.html">CSS Layout</a></li>
       <li><a href="css_animation.html">CSS Animation</a></li>
