--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <p>This page provides an index of various CSS topics. Click on any topic to learn more!</p>
 
     <ul class="topic-list">
-        <li><a href="../CSS-Intro/intro.html">CSS Introduction and Types of CSS</a></li>
-        <li><a href="../Box-Model/box.html">CSS Box Model</a></li>
-      <li><a href="../Type-of-Selectors/selectors.html">Types of selectors in CSS</a></li>
-      <li><a href="../Typography/typography.html">What is Typography ?</a></li>
-      <li><a href="../Display-Property/display.html">Display-Property</a></li>
+        <li><a href="./CSS-Intro/intro.html">CSS Introduction and Types of CSS</a></li>
+        <li><a href="./Box-Model/box.html">CSS Box Model</a></li>
+      <li><a href="./Type-of-Selectors/selectors.html">Types of selectors in CSS</a></li>
+      <li><a href="./Typography/typography.html">What is Typography ?</a></li>
+      <li><a href="./Display-Property/display.html">Display-Property</a></li>
 
-      <li><a href="../Positioning/position.html">CSS Positioning</a></li>
+      <li><a href="./Positioning/position.html">CSS Positioning</a></li>
 
 
       <!-- <li><a href="css_layout.html">CSS Layout</a></li>
