--- a/CSS-Intro/intro.html
+++ b/CSS-Intro/intro.html
@@ -18,7 +18,7 @@
   <section>
     <h2>1. Inline CSS</h2>
     <p>Inline CSS is used to apply styles directly to HTML elements using the <code>style</code> attribute. It affects only that specific element and is useful for quick styling of single elements.</p>
-    <div class="example-box" style="background-color: #ffeb3b;">
+    <div class="example-box">
       This is an example of <strong>Inline CSS</strong>. The background color is applied directly using the <code>style</code> attribute.
     </div>
   </section>
