--- a/Box-Model/box.html
+++ b/Box-Model/box.html
@@ -46,5 +46,8 @@
       </div>
     </div>
   </main>
+  <footer>
+    <p>&copy; 2025 CSS Tutorial - Understanding CSS Types</p>
+  </footer>
 </body>
 </html>
