--- a/Positioning/position.html
+++ b/Positioning/position.html
@@ -52,5 +52,9 @@
     <div class="spacer"></div>
   </main>
 
+  <footer>
+    <p>&copy; 2025 CSS Topics Index | All Rights Reserved</p>
+  </footer>
+  
 </body>
 </html>
